<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>polaris-agent-core</artifactId>
        <groupId>com.tencent.polaris</groupId>
        <version>${revision}</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>polaris-agent-core-optional-java17</artifactId>
    <packaging>jar</packaging>


    <properties>
        <jdk.version>17</jdk.version>
        <jdk.home>${env.JAVA_17_HOME}</jdk.home>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.tencent.polaris</groupId>
            <artifactId>polaris-agent-core-asm</artifactId>
            <version>${project.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>--add-exports</arg><arg>java.base/jdk.internal.loader=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg><arg>java.base/jdk.internal.module=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg><arg>java.base/jdk.internal.access=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        --add-exports java.base/jdk.internal.loader=ALL-UNNAMED
                        --add-exports java.base/jdk.internal.module=ALL-UNNAMED
                        --add-exports java.base/jdk.internal.access=ALL-UNNAMED
                    </argLine>
                    <encoding>${encoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
